included all the scenarios

--- a/rabies_model.html
+++ b/rabies_model.html
@@ -181,6 +181,42 @@ Dog population management
 </div>
 </div>
 </section>
+<section id="annual-vaccination-100-days-with-dog-population-management" class="level4">
+<h4 class="anchored" data-anchor-id="annual-vaccination-100-days-with-dog-population-management">Annual vaccination (100 days) with dog population management</h4>
+<div class="cell">
+<div class="cell-output-display">
+<p><img src="rabies_model_files/figure-html/unnamed-chunk-14-1.png" class="img-fluid" width="672"></p>
+</div>
+</div>
+<div class="cell">
+<div class="cell-output-display">
+<p><img src="rabies_model_files/figure-html/unnamed-chunk-15-1.png" class="img-fluid" width="672"></p>
+</div>
+</div>
+<div class="cell">
+<div class="cell-output-display">
+<p><img src="rabies_model_files/figure-html/unnamed-chunk-16-1.png" class="img-fluid" width="672"></p>
+</div>
+</div>
+</section>
+<section id="continuous-vaccination-with-dog-population-management" class="level4">
+<h4 class="anchored" data-anchor-id="continuous-vaccination-with-dog-population-management">Continuous vaccination with dog population management</h4>
+<div class="cell">
+<div class="cell-output-display">
+<p><img src="rabies_model_files/figure-html/unnamed-chunk-17-1.png" class="img-fluid" width="672"></p>
+</div>
+</div>
+<div class="cell">
+<div class="cell-output-display">
+<p><img src="rabies_model_files/figure-html/unnamed-chunk-18-1.png" class="img-fluid" width="672"></p>
+</div>
+</div>
+<div class="cell">
+<div class="cell-output-display">
+<p><img src="rabies_model_files/figure-html/unnamed-chunk-19-1.png" class="img-fluid" width="672"></p>
+</div>
+</div>
+</section>
 </section>
 </section>
 
